# Factory-Designer

./: Cargo.toml
src/: createable_node.rs  main.rs  node.rs  node_graph.rs  node_input.rs  node_output.rs  sink_node.rs  source_node.rs
src/nodes/: adder_node.rs  graph_node.rs  mod.rs  one_to_n_node.rs  sink_node.rs  source_node.rs
