[package]
name = "factory_designer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
slotmap = "1.0.7"
eframe = { git = "https://github.com/emilk/egui.git", branch = "master", features = ["wgpu", "serde", "persistence"] }
wgpu = {version = "0.20.0", features=["angle"]}
dyn-clone = "1.0.17"